--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "strict": true,
-    "target": "es2016",
+    "target": "ES2021",
     "outDir": "./dist",
     "module": "CommonJS",
     "skipLibCheck": true,
