--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "main": "index.ts",
   "scripts": {
     "start": "npx ts-node index.ts",
-    "prettier": "npx prettier --write .",
-    "prettier:check": "npx prettier --check .",
+    "prettier": "npx prettier --write index.ts src/",
+    "prettier:check": "npx prettier --check index.ts src/",
+    "lint": "npx eslint --fix index.ts src/",
+    "lint:check": "npx eslint index.ts src/",
     "compile": "npx tsc"
   },
   "keywords": [],
@@ -20,6 +22,9 @@
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/express-fileupload": "^1.4.4",
+    "@typescript-eslint/eslint-plugin": "^6.11.0",
+    "eslint": "^8.54.0",
+    "eslint-plugin-import": "^2.29.0",
     "prettier": "^3.1.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
