--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "version": "1.0.0",
   "main": "index.ts",
   "scripts": {
-    "start": "npx ts-node index.ts",
+    "start": "npm run build && node dist/index.js",
     "prettier": "npx prettier --write index.ts src/",
     "prettier:check": "npx prettier --check index.ts src/",
     "lint": "npx eslint --fix index.ts src/",
     "lint:check": "npx eslint index.ts src/",
-    "compile": "npx tsc"
+    "build": "npx tsc --build"
   },
   "keywords": [],
   "author": "",
@@ -26,7 +26,6 @@
     "eslint": "^8.54.0",
     "eslint-plugin-import": "^2.29.0",
     "prettier": "^3.1.0",
-    "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
   }
 }
