--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -44,7 +44,7 @@ jobs:
       - name: eslint
         run: npm run lint:check
 
-  compile:
+  build:
     runs-on: ubuntu-latest
     steps:
       - name: Git checkout
@@ -61,5 +61,5 @@ jobs:
       - name: Copy Config,
         run: cp config.example.json config.json
 
-      - name: Test Compile
-        run: npm run compile
+      - name: Test Build
+        run: npm run build
