--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "1.0.0",
   "main": "index.ts",
   "scripts": {
-    "start": "npm run build && node dist/index.js",
+    "start": "npm run build && cd dist/ && node index.js",
     "prettier": "npx prettier --write index.ts src/",
     "prettier:check": "npx prettier --check index.ts src/",
     "lint": "npx eslint --fix index.ts src/",
