--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,13 @@
 {
   "compilerOptions": {
     "strict": true,
-    "target": "ES2021",
     "outDir": "./dist",
+    "target": "ES2022",
     "module": "CommonJS",
     "skipLibCheck": true,
     "esModuleInterop": true,
     "resolveJsonModule": true,
+    "typeRoots": ["./src/types"],
     "forceConsistentCasingInFileNames": true
   }
 }
