--- a/config.example.json
+++ b/config.example.json
@@ -1,6 +1,7 @@
 {
   "PORT": 3000,
-  "nameHide": true,
   "url": "URL_OF_THE_CDN",
-  "key": "API_KEY"
+  "nameHide": true,
+  "key": "API_KEY",
+  "maxFileSize": 104857600
 }
