Add Discord Embed functionality

--- a/config.example.json
+++ b/config.example.json
@@ -4,5 +4,6 @@
   "nameHide": true,
   "key": "API_KEY",
   "maxFileSize": 104857600,
-  "allowConfigGen": true
+  "allowConfigGen": true,
+  "discordEmbed": false
 }
