--- a/.github/workflows/ci-cd-16x.yml
+++ b/.github/workflows/ci-cd-16x.yml
@@ -1,4 +1,3 @@
-# This CI Workflow was deployed and configured by WarpWing and Nate.
 name: CI/CD 16x
 
 on:
@@ -58,8 +57,25 @@ jobs:
       - name: Install node dependencies
         run: npm i
 
-      - name: Copy Config,
+      - name: Copy Config
         run: cp config.example.json config.json
 
       - name: Test Build
         run: npm run build
+
+  scss:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Git checkout
+        uses: actions/checkout@v4
+
+      - name: Use Node.js ${{ env.NODE_VERSION }}
+        uses: actions/setup-node@v4
+        with:
+          node-version: ${{ env.NODE_VERSION }}
+
+      - name: Install node dependencies
+        run: npm i
+
+      - name: Test SCSS
+        run: npm run scss
