--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "copy-web-data": "npx ncp src/views/ dist/src/views/ && npx ncp src/public/ dist/src/public/",
     "lint:check": "npx eslint index.ts src/",
     "lint": "npx eslint --fix index.ts src/",
-    "build": "npx tsc --build && npm run copy-web-data"
+    "scss": "npx sass src/public/scss:src/public/css --style=compressed",
+    "scss:watch": "npx sass --watch src/public/scss:src/public/css",
+    "build": "npx tsc --build && npm run scss && npm run copy-web-data"
   },
   "keywords": [],
   "author": "",
@@ -19,6 +21,7 @@
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-fileupload": "^1.4.3",
+    "sass": "^1.70.0",
     "winston": "^3.11.0"
   },
   "devDependencies": {
